Melhorias: - Makefile build e cross - Update README - Add OpenAPI 3.0 - Update static files no server.go

--- a/web/index.html
+++ b/web/index.html
@@ -9,5 +9,8 @@
 <body>
   <h1>go crud person</h1>
   <p>static page</p>
+
+
+  <p><a href="docs">/docs</a> - Documentação da API Rest do <b>Go CRUD Person</b> no padrão OpenAPI 3.0.</p>
 </body>
 </html>
